@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Added compile-options --[no-]bound-methods
+
  * Added augassign for indexed items
 
  * Whitespace cleanup of addons by stefan schwarzer
